Time: 9 ms (98.36%) | Memory: 65.7 MB (21.05%) - LeetSync